dist/1.0/bin/sample/retrieveUnpackaged/objects/Contract_Agreement_Discount__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Agreement__c</fullName>
        <label>Contract Agreement</label>
        <referenceTo>Contract_Agreement__c</referenceTo>
        <relationshipLabel>Discounts</relationshipLabel>
        <relationshipName>Contract_Agreement_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <referenceTo>Direction__c</referenceTo>
        <relationshipLabel>Contract Agreement Discounts</relationshipLabel>
        <relationshipName>Contract_Agreement_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <label>Order Line</label>
        <referenceTo>OrderLine__c</referenceTo>
        <relationshipLabel>Contract Agreement Discounts</relationshipLabel>
        <relationshipName>Contract_Agreement_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Agreement Discount</label>
    <nameField>
        <label>Contract Agreement Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Agreement Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>